# FSD-Gsmart

./: CHANGELOG.md  CLAUDE.md  README.md  TODO.md
camera/install/: local_setup.sh  setup.sh
camera/install/camera_node/share/camera_node/: package.sh  package.xml
camera/log/: latest_build
camera/src/camera_msg/: CMakeLists.txt  package.xml
camera/src/camera_msg/msg/: DetectedObjectWithPoses.msg
camera/src/camera_node/: setup.py  start_pro.sh  start_yolo.sh
camera/src/ros2_lidar_camera_fusion_with_detection/: package.xml  setup.py
camera/src/yolo_msgs/: CMakeLists.txt
camera/src/yolo_ros/: setup.py
fsds_ros_bridge/: README.md  package.xml  setup.cfg  setup.py
fsds_ros_bridge/fsds_ros_bridge/: bridge_node.py
fsds_ros_bridge/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
fsds_ros_bridge/log/: latest_build
fsds_ros_bridge/resource/: fsds_ros_bridge
install/: local_setup.sh  setup.sh
li_cam_percep/lidar_cone_detector/.marscode/: deviceInfo.json
li_cam_percep/lidar_cone_detector/install/: local_setup.sh  setup.sh
li_cam_percep/lidar_cone_detector/install/lidar_cone_detector/share/lidar_cone_detector/: local_setup.dsv  package.dsv  package.sh  package.xml
li_cam_percep/src/camera_node/: start.sh
lidar/lidar_cone_detector/: CMakeLists.txt  README.md
lidar/lidar_cone_detector/config/: lidar_cone_detector.yaml
lidar/lidar_cone_detector/install/: local_setup.sh  setup.ps1  setup.sh
lidar/lidar_cone_detector/install/lidar_cone_detector/lib/lidar_cone_detector/: lidar_cone_detector
lidar/lidar_cone_detector/install/lidar_cone_detector/share/ament_index/resource_index/package_run_dependencies/: lidar_cone_detector
lidar/lidar_cone_detector/install/lidar_cone_detector/share/ament_index/resource_index/parent_prefix_path/: lidar_cone_detector
lidar/lidar_cone_detector/install/lidar_cone_detector/share/lidar_cone_detector/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml  package.zsh
lidar/lidar_cone_detector/install/lidar_cone_detector/share/lidar_cone_detector/cmake/: ament_cmake_export_dependencies-extras.cmake  lidar_cone_detectorConfig-version.cmake  lidar_cone_detectorConfig.cmake
lidar/lidar_cone_detector/install/lidar_cone_detector/share/lidar_cone_detector/config/: lidar_cone_detector.yaml
lidar/lidar_cone_detector/install/lidar_cone_detector/share/lidar_cone_detector/environment/: ament_prefix_path.dsv  path.dsv
lidar/lidar_cone_detector/log/: latest_build
lidar/lidar_cone_detector/src/: lidar_cone_detector_3.19.cpp
lidar/lidar_cone_detector/src/backups/: intensity.txt
lidar/lidar_cone_detector/tools/: record_cones.py  recorded_cones.txt
lidar_cone_detector/log/: latest_build
lidar_cone_detector/src/: lidar_cone_detector_3.19.cpp  欧式聚类+形态学.txt
lidar_cone_detector/src/backups/: ROI+RANSAC+欧式聚类+形态学.txt
log/: latest_build
planning_control/skidpad/: CLAUDE.md  README.md
planning_control/skidpad/install/: local_setup.sh  setup.sh
planning_control/skidpad/src/icp_test_tools/: README.md  package.xml  setup.cfg  setup.py
planning_control/skidpad/src/icp_test_tools/config/: test_params.yaml
planning_control/skidpad/src/icp_test_tools/icp_test_tools/: printer_node.py  publisher_node.py
planning_control/skidpad/src/icp_test_tools/install/: local_setup.sh  setup.sh
planning_control/skidpad/src/icp_test_tools/install/icp_test_tools/lib/icp_test_tools/: printer_node  publisher_node
planning_control/skidpad/src/icp_test_tools/install/icp_test_tools/share/icp_test_tools/: package.dsv  package.ps1  package.sh  package.zsh
planning_control/skidpad/src/icp_test_tools/install/icp_test_tools/share/icp_test_tools/config/: test_params.yaml
planning_control/skidpad/src/icp_test_tools/install/icp_test_tools/share/icp_test_tools/launch/: icp_test.launch.py
planning_control/skidpad/src/icp_test_tools/log/: latest_build
planning_control/skidpad/src/skidpad_control/: package.xml  setup.cfg  setup.py
planning_control/skidpad/src/skidpad_control/config/: pure_pursuit_params.yaml
planning_control/skidpad/src/skidpad_control/launch/: pure_pursuit_launch.py
planning_control/skidpad/src/skidpad_control/skidpad_control/: controller.py  node.py  visualize.py
planning_control/skidpad/src/skidpad_msgs/: CMakeLists.txt  README.md  package.xml
planning_control/skidpad/src/skidpad_msgs/msg/: ControlCommand.msg  Trajectory.msg
planning_control/skidpad/src/skidpad_planner/: CMakeLists.txt  README.md  package.xml
planning_control/skidpad/src/skidpad_planner/config/: skidpad_planner.yaml
planning_control/skidpad/src/skidpad_planner/include/: path_generator.hpp  path_generator_handle.hpp
planning_control/skidpad/src/skidpad_planner/include/Track/: skidpad_track.hpp
planning_control/skidpad/src/skidpad_planner/include/Utils/: param.h
planning_control/skidpad/src/skidpad_planner/launch/: skidpad_planner.launch.py
planning_control/skidpad/src/skidpad_planner/src/: path_generator.cpp  path_generator_handle.cpp
planning_control/skidpad/src/skidpad_planner/src/Track/: skidpad_track.cpp  track_base.cpp
planning_control/skidpad_ws/: CLAUDE.md  README.md
planning_control/skidpad_ws/src/skidpad_icp/: CMakeLists.txt
planning_control/skidpad_ws/src/skidpad_icp/config/: skidpad.pcd  skidpad_detector.yaml
planning_control/skidpad_ws/src/skidpad_icp/include/: skidpad_detector_handle.hpp
planning_control/skidpad_ws/src/skidpad_icp/install/skidpad_detector/share/ament_index/resource_index/package_run_dependencies/: skidpad_detector
planning_control/skidpad_ws/src/skidpad_icp/install/skidpad_detector/share/skidpad_detector/: package.bash  package.dsv  package.ps1
planning_control/skidpad_ws/src/skidpad_icp/install/skidpad_detector/share/skidpad_detector/launch/: skidpad_detector.launch.py
planning_control/skidpad_ws/src/skidpad_icp/log/: latest_build
planning_control/skidpad_ws/src/skidpad_icp/src/: main.cpp  skidpad_detector_handle.cpp
slam_localization/pbox_node_dirve/: .gitignore  README.md  configure.sh  编译配置说明.md
(+615 files in other folders)
