<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_msg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nvidia@todo.todo">nvidia</maintainer>
  <license>Apache-2.0</license>
  
  <!-- 修正成员组名称 -->
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  

  <!-- 修正依赖项名称并添加缺失的依赖 -->
  <depend>builtin_interfaces</depend>
  <depend>rosidl_default_generators</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
