<package format="3">
  <name>icp_test_tools</name>
  <version>0.0.1</version>
  <description>Test tools for ICP</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs_py</depend>
  <depend>python3-numpy</depend>
  <depend>python3-scipy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>