<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>


<package format="3">

  <maintainer email="zhangjx1522@163.com">zjx</maintainer>
  <name>lidar_cone_detector</name>
  <version>0.0.1</version>
  <description>ROS2 hesai point cloud processing package</description>



  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>pcl</depend>
  <depend>perception_pcl</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
